<resources>
    <string name="app_name">MypageSelerTest</string>
    <string name="title">マイページ</string>
    <string name="tv_name">出品者名:</string>
    <string name="tv_uname">ユーザーネーム:</string>
    <string name="tv_mail">メールアドレス:</string>
    <string name="tv_pass">パスワード:</string>
    <string name="tv_type">種別:出品者</string>
    <string name="bt_referenceinformation">情報を修正する</string>
    <string name="bt_mypage">マイページ</string>
    <string name="bt_sell5">売却</string>
    <string name="bt_order6">受注</string>
    <string name="title1">出品</string>
    <string name="bt_list">出品する</string>
    <string name="bt_list1">出品リスト</string>
    <string name="bt_mypage1">マイページ</string>
    <string name="bt_sell">売却</string>
    <string name="bt_order">受注</string>
    <string name="title2">出品概要</string>
    <string name="tv_productname">商品名称:</string>
    <string name="tv_detail">詳細:</string>
    <string name="tv_amountsetting">金額設定:</string>
    <string name="tv_reservationperiod">予約期間:</string>
    <string name="bt_list2">出品する</string>
    <string name="bt_mypage2">マイページ</string>
    <string name="bt_sell1">売却</string>
    <string name="bt_order2">受注</string>
    <string name="title3">出品致しました!</string>
    <string name="tv_productname1">商品名称:</string>
    <string name="tv_detail1">詳細:</string>
    <string name="tv_amountsetting1">金額設定:</string>
    <string name="tv_reservationperiod1">予約期間:</string>
    <string name="bt_complete">完了</string>
    <string name="bt_correction">修正</string>
    <string name="bt_mypage3">マイページ</string>
    <string name="bt_sell2">売却</string>
    <string name="bt_order3">受注</string>
    <string name="title4">出品内容</string>
    <string name="tv_productname2">商品名称:</string>
    <string name="tv_detail2">詳細:</string>
    <string name="tv_amountsetting2">金額設定:</string>
    <string name="tv_reservationperiod2">予約期間:</string>
    <string name="tv_numberofreservations">予約数</string>
    <string name="tv_reservationstatos">予約状態</string>
    <string name="bt_correction1">修正</string>
    <string name="bt_mypage4">マイページ</string>
    <string name="bt_sell3">売却</string>
    <string name="bt_order4">受注</string>
    <string name="title5">出品概要修正</string>
    <string name="tv_productname3">商品名称:</string>
    <string name="tv_detail3">詳細:</string>
    <string name="tv_amountsetting3">金額設定:</string>
    <string name="tv_reservationperiod3">予約期間:</string>
    <string name="bt_complete1">完了</string>
    <string name="bt_relisting">再出品</string>
    <string name="bt_additionallisting">追加出品</string>
    <string name="bt_mypage5">マイページ</string>
    <string name="bt_sell4">売却</string>
    <string name="bt_order5">受注</string>
</resources>